# bigfile

./: .gitignore  README.md  pyproject.toml
example/: cifar_example.py
src/bigfile/: bigfile.py  bigfile_builder.py
src/bigfile/utils/: timing.py
tests/: dataset_test.py
