[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bigfile"
description = "Store one dataset of transformed entries in one big binary file (compatible with torch datasets)"
version = "0.1.0"
requires-python = ">=3.10.0"
readme = "README.md"
dependencies = []

